--- a/Assignment 7.ipynb
+++ b/Assignment 7.ipynb
@@ -90,7 +90,7 @@
     "$N(k) = \n",
     "\\begin{cases} \n",
     "0 & \\text{if $k=0$} \\\\\n",
-    "\\min_{x_i\\leq k}{[N(k-x)+1]} & \\text{if $k>2$}\n",
+    "\\min_{x_i\\leq k}{[N(k-x_i)+1]} & \\text{if $k>2$}\n",
     "\\end{cases}$"
    ]
   },
