--- a/Assignment 7.ipynb
+++ b/Assignment 7.ipynb
@@ -34,7 +34,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Consider the situation when we are looking for change with $k=\\$12$.  The Greedy algorithm will return $G(k) = 6$ for $\\$12 = \\$7 + \\$1 + \\$1 + \\$1 + \\$1 + \\$1$, but an optimized algorithm $N(k)=3$ with the solution $\\$12 = \\$4 + \\$4 + \\$4$. Q.E.D"
+    "Code for solving this problem is found at the end of the document.  \n",
+    "\n",
+    "Consider the situation when we are looking for change with $k=\\$416$.  The Greedy algorithm will return $G(k) = 7$ for $\\$416 = \\$356 + \\$28 + \\$13 + \\$7 + \\$1 + \\$1 + \\$1$, but an optimized algorithm $N(k)=5$ with the solution $\\$416 = \\$91 + \\$91 + \\$91 + \\$91 + \\$52$. Q.E.D"
    ]
   },
   {
@@ -46,14 +48,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[13, 7, 4, 1]\n"
+      "[365, 28, 13, 7, 1, 1, 1]\n"
      ]
     }
    ],
@@ -71,7 +73,7 @@
     "    \n",
     "S=[]\n",
     "C = [1, 4, 7, 13, 28, 52, 91, 365]\n",
-    "Goal = 25\n",
+    "Goal = 416\n",
     "greedy(C, S, Goal)\n",
     "print(S)\n"
    ]
@@ -317,6 +319,71 @@
     "a1, a2 = bottomUp(money, goal)\n",
     "a2 = \"$\" + str(goal) + \" = \" + \" + \".join([\"$\"+str(i) for i in a2])\n",
     "print(\"\\nFinal Answer: N(\" + str(goal) + \") = \", a1, \"\\nwith: \", a2)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### The code below calculates the first instance when the greedy algorithm and the optimized algorithm do not match in problem A."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "416\n"
+     ]
+    }
+   ],
+   "source": [
+    "def greedy(coins, selected, remain):\n",
+    "    if remain <= 0:\n",
+    "        return \n",
+    "    \n",
+    "    for i in coins[::-1]:\n",
+    "        if i <= remain:\n",
+    "            selected.append(i)\n",
+    "            greedy(coins, selected, remain-i)\n",
+    "            return len(selected)\n",
+    "    return len(selected)\n",
+    "    \n",
+    "def bottomUp(money, goal):\n",
+    "    count = [0]*(goal+1) \n",
+    "    solutions = [0]*(goal+1) \n",
+    "    val = 0\n",
+    "    for c in range(1, goal+1):\n",
+    "        minimum = goal\n",
+    "        for m in [k for k in money if k <= c]:\n",
+    "            temp = 1+count[c-m]\n",
+    "            if temp < minimum:\n",
+    "                minimum = temp\n",
+    "                val = m\n",
+    "        count[c] = minimum\n",
+    "        solutions[c] = val \n",
+    "#     print(count)\n",
+    "    return count[goal]\n",
+    "\n",
+    "goal = 118\n",
+    "money = [1, 4, 7, 13, 28, 52, 91, 365]\n",
+    "\n",
+    "answer = bottomUp(money, goal)\n",
+    "# print(\"\\nFinal Answer: N(\" + str(goal) + \") = \", answer)\n",
+    "\n",
+    "goal = 2\n",
+    "while True:\n",
+    "    S = []\n",
+    "    a = greedy(money, S, goal)\n",
+    "    b = bottomUp(money, goal)\n",
+    "    if b < a:\n",
+    "        print(goal)\n",
+    "        break\n",
+    "    goal += 1\n"
    ]
   }
  ],
